--- a/app/src/main/assets/open_source_licenses.html
+++ b/app/src/main/assets/open_source_licenses.html
@@ -56,6 +56,7 @@ limitations under the License.
     <li>
         <b>Sound files ("ping")</b>
         <br/>
+        Downloaded from https://m2.material.io/design/sound/sound-resources.html
     </li>
 </ul>
 <pre>
