--- a/app/src/main/assets/open_source_licenses.html
+++ b/app/src/main/assets/open_source_licenses.html
@@ -25,11 +25,13 @@
         <b>ber-tlv</b>
         <br/>
         Copyright © 2019 Evgeniy (evsinev)<br/>
+        Source code <a href="https://github.com/evsinev/ber-tlv">https://github.com/evsinev/ber-tlv</a>
     </li>
     <li>
         <b>EMV-NFC-Paycard-Enrollment</b>
         <br/>
         Copyright © 2020 Julien Millau (devnied)
+        Source code <a href="https://github.com/devnied/EMV-NFC-Paycard-Enrollment">https://github.com/devnied/EMV-NFC-Paycard-Enrollment</a>
     </li>
 
 </ul>
@@ -56,7 +58,7 @@ limitations under the License.
     <li>
         <b>Sound files ("ping")</b>
         <br/>
-        Downloaded from https://m2.material.io/design/sound/sound-resources.html
+        Source: <a href="https://m2.material.io/design/sound/sound-resources.html">https://m2.material.io/design/sound/sound-resources.html</a>
     </li>
 </ul>
 <pre>
