--- a/app/src/main/assets/open_source_licenses.html
+++ b/app/src/main/assets/open_source_licenses.html
@@ -50,6 +50,41 @@ limitations under the License.
 </pre>
 
 <h3>
+    MIT License
+</h3>
+<ul>
+    <li>
+        <b>android-about-page</b>
+        <br/>
+        Copyright © 2016 Mehdi Sakout (medyo)<br/>
+        Source code <a href="https://github.com/medyo/android-about-page">https://github.com/medyo/android-about-page</a>
+    </li>
+</ul>
+<pre>
+MIT License
+
+Copyright (c) 2016 Mehdi Sakout
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+</pre>
+
+<h3>
     Creative Commons
     <br/>
     Attribution 4.0 International (CC BY 4.0)
